<resources>
    <string name="app_name">AgroCare</string>
    <string name="name">Name</string>
    <string name="comment_here">comment here....</string>
    <string name="mrmrs">Mr./Mrs.</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="send_otp">Send Otp</string>
    <string name="Verification_Failed">Verification Failed</string>
    <string name="Username_Required">Username Required</string>
    <string name="Invalid_MobileNumber">Invalid MobileNumber</string>
    <string name="Otp_Sent_to">OTP Sent To </string>
    <string name="Verify_Otp">Verify Otp</string>
    <string name="Code_sent">Code sent Successfully</string>
    <string name="Signin_Failed">SignIn Failed</string>
    <string name="Explore_Feed">Explore Feed</string>
    <string name="My_Feed">My Feed</string>
    <string name="Description">Description</string>
    <string name="Upload">Upload</string>
    <string name="cancel">Cancel</string>
    <string name="Labour_mobile_number">Worker Mobile Number</string>
    <string name="Labour_Vacancy">Worker Vacancy</string>
    <string name="Labour_Managment">Worker Managment</string>
    <string name="Add_Labour">Add Worker</string>
    <string name="Labour_name">Worker Name</string>
    <string name="wages">wages</string>
    <string name="Place_of_work">Place of work</string>
    <string name="Select_date">Select Date</string>
    <string name="Additional_Description">Additional Description</string>
    <string name="Save_Detail">Save Detail</string>
    <string name="Data_Added_Sucessfully">Data Added Sucessfully</string>
    <string name="Hello">Hello</string>
    <string name="msg1">Your Wages Detail are Following</string>
    <string name="Worker_name">Name of Worker</string>
    <string name="loc">Location of Work</string>
    <string name="date">Date</string>
    <string name="Wages">Wages</string>
    <string name="Sender">Sender</string>
    <string name="msg2">Your Wages Detail of</string>
    <string name="msg3">is Deleted</string>
    <string-array name="language">
        <item>English</item>
        <item>Hindi</item>
        <item>Gujarati</item>
        <item>Bangla</item>
        <item>English</item>
        <item>Kannada</item>
        <item>Malayalam</item>
        <item>Marathi</item>
        <item>Punjabi</item>
        <item>Tamil</item>
        <item>Telugu</item>
        <item>Urdu</item>
    </string-array>
    <string name="log_Out">Log Out</string>
    <string name="Rate_us">Rate us</string>
    <string name="Contact_us">Contact us</string>
    <string name="Share_app">Share app</string>
    <string name="Goverment_scheme">Goverment scheme</string>
    <string name="Term_Condition">Term&amp;Condition</string>
    <string name="Change_Detail">Change Detail</string>
    <string name="Interested_Labour">Interested Labour will Contact through this number</string>
    <string name="Select_Image">Select Image</string>
    <string name="State">State</string>
    <string name="Price_Details">Price Details</string>
    <string name="District">District</string>
    <string name="Tehsil">Tehsil</string>
    <string name="city_town_village">city/town/village</string>
    <string name="Owner_name">Name of Owner</string>
    <string name="Work_type">Type of Work</string>
    <string name="Fix_Wages">Fix Wages</string>
    <string name="On_Partenership">On Partenership</string>
    <string name="Extected_Income">Expected Annual Income</string>
    <string name="Work_Duration">Work Duration(In Month)</string>
    <string name="Interest">I am interested in your vacancy for farmer</string>
    <string name="sell">Sell</string>
    <string name="Name_of_product">Name of product</string>
    <string name="specie">Specie</string>
    <string name="Quantity">Quantity(In KiloGram)</string>
    <string name="Price">Price(Per KiloGram)</string>
    <string name="Total_Payment">Total Payment</string>
    <string name="Choose_Image">Choose Image</string>
    <string name="Category">Category</string>
    <string name="animals">animals</string>
    <string name="Tools_Accesories">Tools&amp;Accesories</string>
    <string name="My_Product">My Product</string>
    <string name="Interest2">I am interested in your Product</string>
    <string name="qty">Quntity:</string>
    <string name="prc">Price:₹</string>
    <string name="add_Video">Add Video</string>
    <string name="add_Photo">Add Photo</string>
    <string name="Write_Share">Write And Share</string>
    <string name="Write_Something">Write Something Here...</string>
    <string name="Month">Month</string>
    <string name="internet_on">Please! Turn On Your internet</string>
    <string name="Network_error">Network error</string>
    <string name="msgsent">Message Sent</string>
    <string name="Update_Profile">Update Profile</string>
    <string name="Update_Profile_picture">Update profile picture</string>
    <string name="Scheme_name">Scheme name</string>
    <string name="Add_Scheme">Add Scheme</string>
    <string name="Product_Description">Product Description</string>
    <string name="Recommandation">Recommandation</string>
    <string name="Specification">Specification</string>
    <string name="add_product">add product</string>
    <string name="qty2">Quantity</string>
    <string name="Headline">Headline</string>
    <string name="Publish_news">Publish news</string>
    <string name="Age">Age</string>
    <string name="Weight">Weight</string>
    <string name="Milk_Production">Milk Production(/Ltr)</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="Price2">Price</string>
    <string name="KiloGram2">KiloGram</string>
    <string name="choose_cat">Choose Category</string>
    <string name="choose_anm">Choose Animal</string>
    <string name="sheep">Sheep</string>
    <string name="goat">Goat</string>
    <string name="cow">Cow</string>
    <string name="buffalo">Buffalo</string>
    <string name="ox">Ox</string>
    <string name="chiken">Chicken</string>
    <string name="camel">Camel</string>
    <string name="horse">Horse</string>
    <string name="Add_Vacancy">Add Vacancy</string>
    <string name="Cart_product">Cart product</string>
    <string name="My_Order">My Order</string>
    <string name="Agro_Farm">AgroCare</string>
    <string name="Select_Language">Select Language</string>
    <string name="Seller_name">Seller name</string>
    <string name="Usage">Usage</string>
    <string name="Cuti_prd">Cultivation Product</string>
    <string name="MyAnimal">Animals</string>
    <string name="Toolsacc">Tools&amp;Accesories</string>
    <string name="Please_Enter_Speices">Please enter speices</string>
    <string name="Please_Enter_Year">Please enter year</string>
    <string name="Please_Enter_Month">Please enter month</string>
    <string name="Please_Enter_Production">Please enter Production</string>
    <string name="Please_Enter_Wight">Please enter weight</string>
    <string name="Please_Enter_Mo">Please enter mobile no.</string>
    <string name="Please_Enter_Price">Please enter price</string>
    <string name="Please_Enter_State">Please enter State</string>
    <string name="Please_Enter_Tehsil">Please enter Tehsil</string>
    <string name="Please_Enter_District">Please enter District</string>
    <string name="Please_Enter_Village">Please enter Village/Town/City</string>
    <string name="Please_Enter_Image">Please Select Image</string>
    <string name="Upload_Cancelled">Sorry! Upload is Unsuccessful</string>
    <string name="Upload_Successfully">Uploaded Successfully</string>
    <string name="Please_Enter_Pname">Please enter Product name</string>
    <string name="Please_Enter_Qty">Please enter Quantity</string>
    <string name="Please_Enter_Seller">Please enter Seller Name</string>
    <string name="mobile_no">Mobile no.</string>
    <string name="Please_Enter_Specification">Please enter Specification of Product</string>
    <string name="Please_Enter_Recommandation">Please enter Recommendation for buyer</string>
    <string name="Please_Enter_Description">Please enter Description</string>
    <string name="Please_Enter_Title">Please enter Title</string>
    <string name="Please_Enter_Link">Please enter Link</string>
    <string name="Please_Enter_Lname">Please enter Worker Name</string>
    <string name="Please_Enter_Wages">Please enter Wages</string>
    <string name="Please_Enter_Date">Please Select Date</string>
    <string name="Please_Enter_Duration">Please Enter Usage Duration</string>
    <string name="Delete">Delete Item</string>
    <string name="Update">Update Item</string>
    <string name="Enter_address">Please Enter Address</string>
    <string name="add_news">Add news</string>
    <string name="admin">Administrator</string>
    <string name="payment">Payment</string>
    <string name="Please_Enter_Owner">Please Enter Owner Name</string>
    <string name="Please_Enter_Worktype">Please Enter Type of Work</string>
    <string name="Please_Enter_pincome">Please Enter Predicted Income</string>
    <string name="Please_Enter_wDuration">Please Enter Duration of work</string>
    <string name="Please_Enter_Wagetype">Please Select one Wage type</string>
    <string name="Please_Enter_Video">Please Select a Video post</string>
    <string name="p2">Production(ltr/unit)</string>
    <string name="Added_cart">Added to cart</string>
    <string name="remove_cart">Removed from cart</string>
    <string name="Invalid_Quntity">Invalid Quantity</string>
    <string name="Login_SuccessFully">Login Successfully</string>
    <string name="successfullyuploaded">Details Saved Successfully</string>
    <string name="unsuccessfullyuploaded">Failed to save detail</string>
    <string name="news">News</string>
    <string name="Add_Worker">Add Worker</string>
    <string name="Add_Post">Add Post</string>
    <string name="My_Profile">My Profile</string>
    <string name="Details">Details</string>
    <string name="Close">Close</string>
    <string name="Edit_Profile">Edit Profile</string>
    <string name="Saved">Saved Item</string>
    <string name="FarmerFriend">Farmer Friend</string>
    <string name="Enter_Prompt">Enter Prompt</string>
    <string name="Warning">Warning</string>
    <string name="dbwarningmsg">Are You Sure?</string>
    <string name="Countinue">Countinue</string>
    <string name="Explore_User">Explore User</string>
    <string name="Resell">Resell</string>
    <string name="Resell_Items">Resell Items</string>
    <string name="Select_time">Select_time</string>
    <string name="Education">Education</string>
    <string name="Experience">Experience</string>
    <string name="Discount">Discount</string>
    <string name="Customer_Information">Customer Information</string>
    <string name="Deliver">Deliver to :</string>
    <string name="Payment_Mode">Payment Mode</string>
    <string name="Cash_On_Delivery">Cash On Delivery</string>
    <string name="digital_payment">digital payment</string>
    <string name="Order_Confirm2">Order Confirm</string>
    <string name="Payable_Amount">Payable Amount</string>
    <string name="AgroCare">AgroCare</string>
    <string name="User">User</string>
    <string name="Link">Link</string>
    <string name="Product_Name">Product Name</string>
    <string name="Product_Id">Product Id</string>
    <string name="Order_Id">Order Id</string>
    <string name="Payment_Status">Payment Status</string>
    <string name="Payment_Id">Payment Id</string>
    <string name="Follow">Follow</string>
    <string name="Following">Following</string>
    <string name="Followers">Followers</string>
    <string name="Message">Message</string>
    <string name="Messanger">Messanger</string>
    <string name="del">Delete</string>
    <string name="Price_range">Price range</string>
    <string name="From">From</string>
    <string name="To">To</string>
    <string name="Apply">Apply</string>
    <string name="Clear_All">Clear All</string>
</resources>