<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".add_labour">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Add_Worker"
            android:textColor="@color/ct"
            android:textSize="30dp"
            android:fontFamily="@font/quicksandbold"
            android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"

            />
            <FrameLayout
                android:layout_width="match_parent"
                android:background="@color/frame"
                android:layout_below="@+id/hh"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="20dp"
                android:layout_height="2dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:fontFamily="@font/quicksandsemibold"
                android:text="@string/name"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:textSize="20dp" />
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtlname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="55dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/curvebackground"
                android:backgroundTint="@color/commonw"
                android:fontFamily="@font/quicksandregular"
                android:textColor="@color/black"
                android:hint="@string/Labour_name"
                android:paddingLeft="20dp"
                app:hintTextColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:fontFamily="@font/quicksandsemibold"
                android:text="@string/mobile_no"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="20dp" />
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtlmo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="55dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/curvebackground"
                android:backgroundTint="@color/commonw"
                android:fontFamily="@font/quicksandregular"
                android:textColor="@color/black"
                android:inputType="number"
                android:hint="@string/Labour_mobile_number"
                android:paddingLeft="20dp"
                app:hintTextColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:fontFamily="@font/quicksandsemibold"
                android:text="@string/Place_of_work"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="20dp" />
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtlplace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="55dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/curvebackground"
                android:backgroundTint="@color/commonw"
                android:fontFamily="@font/quicksandregular"
                android:textColor="@color/black"
                android:hint="@string/Place_of_work"
                android:paddingLeft="20dp"
                app:hintTextColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:fontFamily="@font/quicksandsemibold"
                android:text="@string/Wages"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="20dp" />
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtlwages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="55dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/curvebackground"
                android:backgroundTint="@color/commonw"
                android:fontFamily="@font/quicksandregular"
                android:textColor="@color/black"
                android:hint="@string/wages"
                android:inputType="number"
                android:paddingLeft="20dp"
                app:hintTextColor="@color/black" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:fontFamily="@font/quicksandsemibold"
                android:text="@string/Description"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="20dp" />
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtldes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="55dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/curvebackground"
                android:backgroundTint="@color/commonw"
                android:fontFamily="@font/quicksandregular"
                android:textColor="@color/black"
                android:hint="@string/Description"
                android:paddingLeft="20dp"
                app:hintTextColor="@color/black" />





               <RelativeLayout
                   android:id="@+id/rldate"
                   android:layout_width="match_parent"
                   android:layout_height="60dp"
                   android:layout_marginLeft="10dp"
                   android:layout_marginRight="10dp"
                   android:layout_marginTop="20dp"
                   android:layout_marginBottom="5dp"
                   android:backgroundTint="#B9EADD"
                   android:background="@drawable/sendotp"
                   android:gravity="center">


                   <TextView
                       android:id="@+id/txtdate"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/Select_date"
                       android:fontFamily="@font/quicksandsemibold"
                       android:textColor="#056A4F"
                       android:textSize="20dp" />
               </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btnsavedetail"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="20sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/sendotp"
                android:gravity="center">

                <ProgressBar
                    android:id="@+id/progressBar2"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#8BC34A"
                    android:foregroundTint="#8BC34A"
                    android:progressTint="#8BC34A"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksandsemibold"
                    android:text="@string/Save_Detail"
                    android:textColor="#FFFFFF"
                    android:textSize="20dp" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>








</LinearLayout>