<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/frmlayout"
    android:orientation="vertical"
    tools:context=".User_output">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:backgroundTint="#135983"
        app:cardCornerRadius="20dp"
        android:layout_margin="10dp"
        android:elevation="50dp"
        android:background="@drawable/userbac"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/mans"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/User"
                android:textStyle="bold"
                android:textSize="40dp"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/cambay"
                android:layout_marginLeft="20dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:layout_margin="10dp"
    android:id="@+id/rcview"/>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:id="@+id/srcview"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/MyAnimal"
                android:textSize="25dp"
                android:textStyle="bold"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcmyanimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Cuti_prd"
                android:textSize="25dp"
                android:textStyle="bold"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcmyproduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Toolsacc"
                android:textSize="25dp"
                android:textStyle="bold"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcmytools"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>