<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".add_admin">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:inputType="textPersonName"
        android:background="@drawable/curvebackground"
        android:backgroundTint="@color/commonw"
        android:fontFamily="@font/quicksandregular"
        android:textColor="@color/black"
        android:hint="@string/name"
        android:layout_margin="10dp"
        android:paddingLeft="20dp"
        />
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/mo"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="10dp"
        android:inputType="numberDecimal"
        android:maxLength="10"
        android:background="@drawable/curvebackground"
        android:backgroundTint="@color/commonw"
        android:fontFamily="@font/quicksandregular"
        android:textColor="@color/black"
        android:hint="@string/mobile_no"
        android:paddingLeft="20dp"
        />
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="10dp"
        android:inputType="textPassword"
        android:background="@drawable/curvebackground"
        android:backgroundTint="@color/commonw"
        android:fontFamily="@font/quicksandregular"
        android:textColor="@color/black"
        android:hint="Password"
        android:paddingLeft="20dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnadd"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/Apply"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:fontFamily="@font/quicksandsemibold"
        android:background="@drawable/curvebackground"
        android:textColor="#ffffff"
        android:backgroundTint="@color/Dark_green"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcadmin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"/>
</LinearLayout>